5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1644_2446.log
== TEST (2019-04-06 03:00:00) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//1000
a2 = (senha//100)%10
a3 = (senha//10)%10
a4 = (senha%10)

print(a1,a2,a3,a4)
-- OUTPUT:
87 6 1 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:01:02) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//100000)%10
a3 = (senha//10000)%10
a4 = (senha//1000)%10
a5 = (senha//100)%10
a6 = (senha%10)

print(a1,a2,a3,a4,a5,a6)
-- OUTPUT:
0 0 8 7 6 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:01:07) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//10000)%10
a4 = (senha//1000)%10
a5 = (senha//100)%10
a6 = (senha%10)

print(a1,a2,a3,a4,a5,a6)
-- OUTPUT:
0 8 8 7 6 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:01:18) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//1000)%10
a5 = (senha//100)%10
a6 = (senha%10)

print(a1,a2,a3,a4,a5,a6)
-- OUTPUT:
0 8 7 7 6 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:01:27) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a1,a2,a3,a4,a5,a6)
-- OUTPUT:
0 8 7 6 1 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:02:41) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if a2 + a4 + a6 % a1+a3+a5:
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if a2 + a4 + a6 % a1+a3+a5:
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:03:02) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if a2 + a4 + a6 % a1+a3+a5:
	print("senha invalida")
else:
	print("senha valida")
-- EXECUTION TIME:
0.259747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2446/main.py", line 10, in <module>
    if a2 + a4 + a6 % a1+a3+a5:
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:03:05) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if a2 + a4 + a6 % a1+a3+a5:
	print("senha invalida")
else:
	print("senha valida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if a2 + a4 + a6 % a1+a3+a5:
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:03:31) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if a2 + a4 + a6 % a1 + a3 + a5:
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.200748
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2446/main.py", line 10, in <module>
    if a2 + a4 + a6 % a1 + a3 + a5:
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:03:35) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if a2 + a4 + a6 % a1 + a3 + a5:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if a2 + a4 + a6 % a1 + a3 + a5:
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:04:38) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999 
	a2 + a4 + a6 % a1 + a3 + a5:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 10
    if senha < 999999 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:04:45) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 % a1 + a3 + a5:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 11
    a2 + a4 + a6 % a1 + a3 + a5:
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:04:49) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 % a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:04:57) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 % a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:05:19) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 % a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:05:22) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 % a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:06:25) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 // a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 // a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:06:29) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 // a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 // a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:06:46) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 // a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 // a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:07:46) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 // a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 // a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:07:56) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 // a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 // a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:08:15) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 / a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 / a1 + a3 + a5
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:08:18) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 / a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 / a1 + a3 + a5
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:08:22) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

if senha < 999999:
	a2 + a4 + a6 / a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a2 + a4 + a6 / a1 + a3 + a5
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:10:47) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a1,a2,a3,a4,a5,a6)

if senha < 999999:
	a2 + a4 + a6 % a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:11:09) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,a1,a3,a5)

if senha < 999999:
	a2 + a4 + a6 % a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:11:39) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,a1,a3,a5)

if senha < 999999:
	a2 + a4 + a6 % a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
	
print(24 % 6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:11:49) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,a1,a3,a5)

if senha < 999999:
	a2 + a4 + a6 % a1 + a3 + a5
	print("senha invalida")
else:
	print("acesso liberado")
	
print(24 % 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:12:38) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y = 0:
	print("senha invalida")
else:
	print("acesso liberado")
	
print(24 % 7)
-- EXECUTION TIME:
0.146488
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 14
    if y = 0:
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:12:40) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y = 0:
	print("senha invalida")
else:
	print("acesso liberado")
	

-- EXECUTION TIME:
0.201101
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 14
    if y = 0:
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:12:48) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y = 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 14
    if y = 0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:12:51) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y == 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:13:05) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y != 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.102955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2446/main.py", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:13:05) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y != 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:13:35) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y != 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:13:47) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y != 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.157057
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2446/main.py", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:13:47) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y != 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:13:55) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y != 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:15:18) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y <= 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:15:19) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y <= 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.142054
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2446/main.py", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:15:20) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y <= 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:15:29) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:15:29) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.105285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2446/main.py", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:15:31) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:15:35) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:15:49) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y >= 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:15:53) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y >= 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:16:45) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.090831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2446/main.py", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:16:45) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:16:48) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:17:05) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

print(y)

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:18:23) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

print(y)

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:18:30) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 // a1 + a3 + a5

print(y)

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 // a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:19:42) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

print(y)

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:19:47) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = a2 + a4 + a6 % a1 + a3 + a5

print(y)

if y > 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = a2 + a4 + a6 % a1 + a3 + a5
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:20:07) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = (a2 + a4 + a6) % (a1 + a3 + a5)

print(y)

if y != 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.15702
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
8 6 2 % 0 7 1
0
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
6 8 4 % 7 0 3
8
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
2 9 7 % 1 2 6
0
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:20:07) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

print(a2,a4,a6,"%",a1,a3,a5)

y = (a2 + a4 + a6) % (a1 + a3 + a5)

print(y)

if y != 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- OUTPUT:
8 6 2 % 0 7 1
0
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 03:20:17) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

y = (a2 + a4 + a6) % (a1 + a3 + a5)

if y != 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.147355
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 03:20:17) 
-- CODE:
senha = int(input("insira uma senha: "))

a1 = senha//100000
a2 = (senha//10000)%10
a3 = (senha//1000)%10
a4 = (senha//100)%10
a5 = (senha//10)%10
a6 = (senha%10)

y = (a2 + a4 + a6) % (a1 + a3 + a5)

if y != 0:
	print("senha invalida")
else:
	print("acesso liberado")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
